[package]
name = "jogojogo-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jogojogo_program"

[dependencies]
anchor-lang = { version = "0.29.0", features = ["derive", "init-if-needed"] }
anchor-spl = "0.29.0"
solana-program = "=1.17.20"
switchboard-solana = "0.29.96"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint", "anchor-lang/event-cpi"]
debug = ["anchor-lang/anchor-debug"]
default = []
